WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
44855
REGRESSION(
r66355
): Fix warnings in html/DateComponents.cpp
https://bugs.webkit.org/show_bug.cgi?id=44855
Summary
REGRESSION(r66355): Fix warnings in html/DateComponents.cpp
Csaba Osztrogonác
Reported
2010-08-29 23:58:58 PDT
gcc warning: ../../../WebCore/html/DateComponents.cpp:642: warning: suggest parentheses around && within ||
Attachments
proposed fix
(1.16 KB, patch)
2010-08-29 23:59 PDT
,
Csaba Osztrogonác
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Csaba Osztrogonác
Comment 1
2010-08-29 23:59:55 PDT
Created
attachment 65885
[details]
proposed fix
Kent Tamura
Comment 2
2010-08-30 00:03:44 PDT
Comment on
attachment 65885
[details]
proposed fix Thanks!
Csaba Osztrogonác
Comment 3
2010-08-30 02:48:18 PDT
Comment on
attachment 65885
[details]
proposed fix Clearing flags on attachment: 65885 Committed
r66379
: <
http://trac.webkit.org/changeset/66379
>
Csaba Osztrogonác
Comment 4
2010-08-30 02:48:27 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug