2010-08-30  Csaba Osztrogonác  <ossy@webkit.org>

Reviewed by Kent Tamura.

        REGRESSION(r66355): Fix warnings in html/DateComponents.cpp
        https://bugs.webkit.org/show_bug.cgi?id=44855

        * html/DateComponents.cpp:
        (WebCore::DateComponents::setMillisecondsSinceEpochForWeek): Suggested parentheses added around && within ||


Canonical link: https://commits.webkit.org/57144@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@66379 268f45cc-cd09-0410-ab3c-d52691b4dbfc